5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1575_1333.log
== TEST (2019-03-12 11:58:36) 
-- CODE:
expres30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expres30 – 3 ** 2 + 8 // 3 ** 2 * 10
             ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:00:14) 
-- CODE:
expressao 8//3**2*10-3**2+30
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao 8//3**2*10-3**2+30
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:00:15) 
-- CODE:
expressao 8//3**2*10-3**2+30
print(expressao)
-- EXECUTION TIME:
0.154481
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao 8//3**2*10-3**2+30
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:00:35) 
-- CODE:
expressao 8//3**2*10 - 3**2 + 30
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao 8//3**2*10 - 3**2 + 30
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:13:07) 
-- CODE:
expressao 8//3**2*10-3**2 + 30
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao 8//3**2*10-3**2 + 30
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:13:09) 
-- CODE:
expressao 8//3**2*10-3**2 + 30
print(expressao)
-- EXECUTION TIME:
0.148244
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao 8//3**2*10-3**2 + 30
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:14:39) 
-- CODE:
expressao=8//3**2*10-3**2 + 30
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:14:41) 
-- CODE:
expressao=8//3**2*10-3**2 + 30
print(expressao)
-- EXECUTION TIME:
0.200556
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
